<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/company_1_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/company_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_1"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/position_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageview2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/mobile" />

                <TextView
                    android:id="@+id/project_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/imageview2"
                    android:text="@string/project_title_2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/project_desc_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/project_text_view"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/imageview2"
                    android:text="@string/desc_project_2"
                    android:textSize="14dp" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>